// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractStatusInfo renders correctly for buyer when requiredAction is confirmPayment 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <PeachText
    style={
      {
        "fontFamily": "Baloo2-SemiBold",
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 24,
        "textAlign": "center",
        "textTransform": "uppercase",
      }
    }
  >
    waiting for confirmation...
  </PeachText>
</View>
`;

exports[`ContractStatusInfo renders correctly for buyer when requiredAction is sendPayment and paymentExpectedBy is in the future 1`] = `
<Timer
  end={1577923200000}
  text="you should pay within"
/>
`;

exports[`ContractStatusInfo renders correctly for buyer when requiredAction is sendPayment and paymentExpectedBy is in the past 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <PeachText
    style={
      {
        "fontFamily": "Baloo2-SemiBold",
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 24,
        "textTransform": "uppercase",
      }
    }
  >
    payment too late!
  </PeachText>
  <Icon
    id="clock"
    style={
      {
        "height": 20,
        "marginLeft": 4,
        "width": 20,
      }
    }
  />
</View>
`;

exports[`ContractStatusInfo renders correctly for seller when cancellation is pending 1`] = `<React.Fragment />`;

exports[`ContractStatusInfo renders correctly for seller when requiredAction is confirmPayment 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <PeachText
    style={
      {
        "fontFamily": "Baloo2-SemiBold",
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 24,
        "textAlign": "center",
        "textTransform": "uppercase",
      }
    }
  >
    buyer made payment
  </PeachText>
  <Icon
    color="#65A519"
    id="check"
    style={
      {
        "height": 20,
        "marginLeft": 4,
        "marginTop": -2,
        "width": 20,
      }
    }
  />
</View>
`;

exports[`ContractStatusInfo renders correctly when cancel trade request confirmation is required from buyer 1`] = `<React.Fragment />`;

exports[`ContractStatusInfo renders correctly when contract is in dispute 1`] = `<React.Fragment />`;

exports[`ContractStatusInfo renders correctly when payment method is cash trade 1`] = `<React.Fragment />`;
